Fix top margin issue going out of container

--- a/assets/styles/layout/_grid.scss
+++ b/assets/styles/layout/_grid.scss
@@ -1,6 +1,7 @@
 .container {
   max-width: $grid-breakpoint-lg * 1px;
   padding: $grid-container-padding;
+  overflow: auto;
   margin: 0 auto;
 
   &--fluid {
